# taisugar-toolkit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cicd.yml
assets/templates/: 110抽面紙交貨統計表.xlsx  110抽面紙每週訂單.xlsx  60抽面紙交貨統計表.xls  60抽面紙交貨統計表.xlsx  60抽面紙訂購單.xlsx  礦泉水月結表.xlsx  礦泉水訂購單.xlsx
crates/daily_necessities/: Cargo.toml
crates/daily_necessities/src/: client.rs  error.rs  lib.rs  purchase_list.rs
crates/freebie/: Cargo.toml
crates/freebie/src/: error.rs  freebie.rs  lib.rs  purchase_order.rs
crates/redweb/: Cargo.toml
crates/redweb/src/: lib.rs
crates/taisugar_toolkit/: Cargo.toml  build.rs
crates/taisugar_toolkit/src/: assets.rs  delivery_record.rs  http.rs  main.rs  purchase_order.rs  view.rs
crates/tscred/: Cargo.toml
crates/tscred/src/: client.rs  date.rs  error.rs  item_needs.rs  lib.rs  operation_center.rs
crates/tscred/testdata/: GetItemNeedCount.json
reports/: 114年110抽面紙每週訂單(中區).xls  114年礦泉水訂購單.xls  114年面紙訂購單60抽.ods  礦泉水月結表.xls  面紙交貨統計表-60抽.xls  面紙交貨統計表110抽.xls  面紙衛生紙月結表 60抽(正隆).xls  面紙衛生紙月結表110抽 (欣達).xls
testdata/: generate-purchase-order-report.json  purchase-list.json
