[package]
name = "daily_necessities"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
jiff.workspace = true
ureq = { version = "3.1.2", features = ["cookies", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
