[package]
name = "taisugar_toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gpui = "0.2.1"
gpui-component = "0.2.0"
jiff = "0.2.15"
rust-embed = { version = "8.8.0", features = ["interpolate-folder-path"] }
tscred = { version = "0.1.0", path = "../tscred" }
ureq = "3.1.2"
